Add .chezmoiscripts/enable-hypr-monitors-service.sh Add .claude/agents/neovim-config-manager.md Add LSP_MODERNIZATION_2025.md Add NATIVE_LSP_MIGRATION_2025.md Update .config/hypr/configs/binds.conf Update .config/hypr/configs/exec.conf Update .config/nvim/init.lua Update .config/nvim/lazy-lock.json Update .config/nvim/lua/config/neotest_projects.lua Update .config/nvim/lua/user/autocmds.lua Update .config/nvim/lua/user/claudecode.lua Update .config/nvim/lua/user/cmp.lua Add .config/nvim/lua/user/codeium.lua Update .config/nvim/lua/user/colorscheme.lua Update .config/nvim/lua/user/dap.lua Update .config/nvim/lua/user/gitsigns.lua Update .config/nvim/lua/user/lspconfig.lua Update .config/nvim/lua/user/lspsettings/bashls.lua Update .config/nvim/lua/user/lspsettings/cssls.lua Update .config/nvim/lua/user/lspsettings/eslint.lua Update .config/nvim/lua/user/lspsettings/lua_ls.lua Update .config/nvim/lua/user/lspsettings/vtsls.lua Update .config/nvim/lua/user/lspsettings/vue_ls.lua Update .config/nvim/lua/user/mason.lua Update .config/nvim/lua/user/neotest/init.lua Update .config/nvim/lua/user/options.lua Update .config/nvim/lua/user/session.lua Update .config/nvim/lua/user/telescope.lua Update .config/nvim/lua/user/treesitter.lua Update .config/nvim/lua/user/whichkey.lua Update .config/wezterm/wezterm.lua Update scripts/hyprland-theme-toggle/theme-toggle-modular.sh

--- a/dot_config/hypr/configs/binds.conf.tmpl
+++ b/dot_config/hypr/configs/binds.conf.tmpl
@@ -53,6 +53,7 @@ bind=SHIFT, Print, exec, /home/{{ .chezmoi.username }}/scripts/record
 bind=$mainMod, L, exec, /home/{{ .chezmoi.username }}/scripts/lock_cmd
 bind=$mainMod, M, exec, ~/.config/wofi/power-menu.sh
 bind=$mainMod, T, exec, /home/{{ .chezmoi.username }}/scripts/hyprland-theme-toggle/theme-toggle-modular.sh
+bind=$mainMod, N, exec, swaync-client -t -sw
 bind=$mainMod, XF86AudioPlay, exec, ~/.config/wofi/change-default-audio-device.js WofiListAudioDevices
 bindl=, XF86AudioPlay, exec, ~/.config/swaync/scripts/media-osd.sh play-pause
 bindl=, XF86AudioStop, exec, ~/.config/swaync/scripts/media-osd.sh stop
