--- a/dot_config/hypr/configs/exec.conf.tmpl
+++ b/dot_config/hypr/configs/exec.conf.tmpl
@@ -8,7 +8,7 @@
 exec-once = dbus-update-activation-environment --all
 exec-once=sleep 1 & dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user start hyprpolkitagent
-exec = /home/mason/.config/hypr/configs/monitors.sh > /home/mason/.config/hypr/logs/monitors.log 2>&1
+exec-once = /home/mason/.config/hypr/configs/monitors.sh > /home/mason/.config/hypr/logs/monitors.log 2>&1
 
 exec-once=/home/mason/.config/hypr/idle.sh
 exec-once=udiskie
@@ -19,7 +19,7 @@ exec-once=swaybg -i $WALLPAPER_PATH -m fill
 # Generate material you colors from wallpaper
 exec-once=matugen image $WALLPAPER_PATH -m dark
 
-exec = /home/mason/scripts/hyprland-theme-toggle/theme-restore.sh >/dev/null 2>&1
+exec-once = /home/mason/scripts/hyprland-theme-toggle/theme-restore.sh >/dev/null 2>&1
 
 # Update hyprpanel wallpaper config and launch
 #exec=sed -i "s|\"wallpaper.image\": \".*\"|\"wallpaper.image\": \"$WALLPAPER_PATH\"|" ~/.config/hyprpanel/config.json && uwsm app -- hyprpanel
