--- a/dot_config/hypr/configs/exec.conf.tmpl
+++ b/dot_config/hypr/configs/exec.conf.tmpl
@@ -30,11 +30,12 @@ exec-once = /usr/libexec/ibus-ui-gtk3 --enable-wayland-im --exec-daemon --daemon
 
 exec=/home/mason/.config/hypr/configs/copy-monitor-layout-to-gdm.sh
 
-
 # Notification daemon
 exec-once = swaync
 
+{{ if .is_work }}
 # Launch Slack via desktop file
-exec-once = gtk-launch slack_slack
+exec-once = gtk-launch slack
+{{ end }}
 
 
