--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -1,6 +1,6 @@
 # Oh My Posh prompt - skip in Cursor integrated terminal
 if not set -q TERM_PROGRAM; or test "$TERM_PROGRAM" != "vscode"
-    oh-my-posh init fish --config {{ .chezmoi.homeDir }}/.config/oh-my-posh/bubbles.omp.json | source
+    oh-my-posh init fish --config /home/mason/.config/oh-my-posh/bubbles.omp.json | source
 end
 
 # Vi keybindings (must come after oh-my-posh)
@@ -31,3 +31,6 @@ end
 
 # Note: Most environment variables and PATH are set via conf.d/environment.fish
 # which sources ~/.config/environment (shared with bash)
+
+# opencode
+fish_add_path /home/mason/.opencode/bin
