Update .chezmoiscripts/15-setup-voice-dictation.sh Update .config/fish/config.fish Update .config/hypr/configs/binds.conf

--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -32,5 +32,8 @@ end
 # Note: Most environment variables and PATH are set via conf.d/environment.fish
 # which sources ~/.config/environment (shared with bash)
 
+# System binaries
+fish_add_path /usr/sbin /sbin
+
 # opencode
 fish_add_path /home/mason/.opencode/bin
