--- a/dot_config/hypr/configs/binds.conf.tmpl
+++ b/dot_config/hypr/configs/binds.conf.tmpl
@@ -75,3 +75,6 @@ bind = ALT, Tab, cyclenext,           # change focus to another window
 bind = ALT, Tab, bringactivetotop,    # bring it to the top
 
 bind=SHIFT, XF86AudioPlay, exec, PULSE_LATENCY_MSEC=60 pavucontrol 
+
+# Voice dictation
+bind=$Meh, V, exec, ~/scripts/dictation-control toggle
