--- a/dot_config/hypr/configs/exec.conf.tmpl
+++ b/dot_config/hypr/configs/exec.conf.tmpl
@@ -29,6 +29,7 @@ exec-once = /home/mason/scripts/hyprland-theme-toggle/theme-restore.sh >/dev/nul
 exec-once = /usr/libexec/ibus-ui-gtk3 --enable-wayland-im --exec-daemon --daemon-args "--xim --panel disable"
 
 exec=/home/mason/.config/hypr/configs/copy-monitor-layout-to-gdm.sh
+exec=systemctl --user restart waybar
 
 # Notification daemon
 exec-once = swaync
