Add missing blink keyframes for battery critical animation

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -64,6 +64,12 @@ window#waybar {
     }
 }
 
+@keyframes blink {
+    to {
+        opacity: 0.5;
+    }
+}
+
 /* Media module - same height as other containers, auto-hide when empty */
 #custom-media {
     padding-left: 12px;
