--- a/dot_config/hypr/hyprlock.conf.tmpl
+++ b/dot_config/hypr/hyprlock.conf.tmpl
@@ -1,7 +1,10 @@
+# Import lmtt-generated Material You colors
+source = ~/.config/hypr/lmtt-hyprlock-colors.conf
+
 background {
     monitor =
     path = {{ .wallpaper }}    # supports png, jpg, webp (no animations, though)
-    color = rgba(25, 20, 20, 1.0)
+    color = $surface_rgba
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
     blur_passes = 0 # 0 disables blurring
@@ -17,7 +20,7 @@ label {
     monitor =
     text = Hi there, $USER
     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = rgba(58, 158, 173, 1.0)
+    color = $primary_rgba
     font_size = 25
     font_family = Noto Sans
     rotate = 0 # degrees, counter-clockwise
@@ -35,16 +38,16 @@ input-field {
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = false
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(742e4d)
-    inner_color = rgb(ffdcba)
-    font_color = rgb(3a9ead)
+    outer_color = $primary_container
+    inner_color = $surface
+    font_color = $on_surface
     fade_on_empty = true
     fade_timeout = 2000 # Milliseconds before fade_on_empty is triggered.
     placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
     hide_input = false
     rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
+    check_color = $primary
+    fail_color = $error # if authentication failed, changes outer_color and fail message color
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
     fail_timeout = 2000 # milliseconds before fail_text and fail_color disappears
     fail_transition = 300 # transition time in ms between normal outer_color and fail_color
