Update .config/hypr/configs/binds.conf Update .config/hypr/configs/exec.conf Update .config/hypr/configs/style.conf

--- a/dot_config/hypr/configs/exec.conf.tmpl
+++ b/dot_config/hypr/configs/exec.conf.tmpl
@@ -26,7 +26,7 @@ exec-once = /home/mason/scripts/hyprland-theme-toggle/theme-restore.sh >/dev/nul
 
 # Input method
 # exec-once = fcitx5
-exec-once = /usr/libexec/ibus-ui-gtk3 --enable-wayland-im --exec-daemon --daemon-args "--xim --panel disable"
+# exec-once = /usr/libexec/ibus-ui-gtk3 --enable-wayland-im --exec-daemon --daemon-args "--xim --panel disable"
 
 exec=/home/mason/.config/hypr/configs/copy-monitor-layout-to-gdm.sh
 # exec=systemctl --user restart waybar
