--- a/dot_config/hypr/configs/binds.conf.tmpl
+++ b/dot_config/hypr/configs/binds.conf.tmpl
@@ -50,7 +50,7 @@ bind=$mainMod, mouse_down, workspace, e+1
 bind=$mainMod, mouse_up, workspace, e-1
 bind=, Print, exec, /home/{{ .chezmoi.username }}/scripts/snip
 bind=SHIFT, Print, exec, /home/{{ .chezmoi.username }}/scripts/record
-bind=$mainMod, L, exec, /home/{{ .chezmoi.username }}/scripts/lock_cmd
+bind=$mainMod, L, exec, loginctl lock-session 
 bind=$mainMod, M, exec, ~/.config/wofi/power-menu.sh
 bind=$mainMod, T, exec, /home/{{ .chezmoi.username }}/scripts/hyprland-theme-toggle/theme-toggle-modular.sh
 bind=$mainMod, N, exec, swaync-client -t -sw
