--- a/dot_config/hypr/configs/monitors.conf.tmpl
+++ b/dot_config/hypr/configs/monitors.conf.tmpl
@@ -7,8 +7,8 @@ monitor = DP-3,highres,auto-right,1
 # Primary ultrawide: Dell 34" curved at 144Hz
 monitor =  desc:Dell Inc. DELL S3422DWG HSRTS63,3440x1440@144,0x0,auto
 # Secondary 4K: Dell 27" positioned right with 1.5x scaling  
-monitor =  desc:Dell Inc. DELL S2721QS 6VSGM43,highres,3440x0,1.5
-#monitor =  desc:Dell Inc. DELL S2721QS 6VSGM43,highres,3440x0,1.5, transform, 3
+#monitor =  desc:Dell Inc. DELL S2721QS 6VSGM43,highres,3440x0,1.5
+monitor =  desc:Dell Inc. DELL S2721QS 6VSGM43,highres,3440x0,1.5, transform, 3
 
 # monitor =  desc:Sharp Corporation 0x14D1,highres,0x0,1
 
